# mt-course

./: .gitignore
lab1/Tasks1/: A_1.perl  A_10.perl  A_11.perl  A_2.perl  A_3.perl  A_4.perl  A_5.perl  A_6.perl  A_7.perl  A_8.perl  A_9.perl
lab1/Tasks2/: B_1.perl  B_10.perl  B_2.perl  B_3.perl  B_4.perl  B_5.perl  B_6.perl  B_7.perl  B_8.perl  B_9.perl
lab1/Tasks3/: A.perl  C_1.perl  C_2.perl  C_3.perl  test0.txt  test2.txt
lab2/: CMakeLists.txt  lexical_analyzer.h  parser.h  parser_testing.cpp  отчет.docx
lab3/: README.md  pom.xml
lab3/src/main/java/: Main.java
lab3/src/main/java/antlr/: PythonGrammar.g4
lab3/src/main/java/ru/parser/visitor/: PythonGrammarVisitor.java
lab3/src/main/resources/: fibonacci.c  fibonacci.py  greatest_common_divisor.c  greatest_common_divisor.py  test.c  test.py
lab4/: pom.xml
lab4/src/main/java/antlr/: GrammarForGrammar.g4
lab4/src/results/expression_generated/: CMakeLists.txt  lexical_analyzer.h  main.cpp
lab4/src/results/lab2_generated/: CMakeLists.txt  lexical_analyzer.h  main.cpp
lab4_try2/src/main/java/: Generator.java
lab4_try2/src/main/java/antlr/: GrammarForGrammar.g4
lab4_try2/src/main/java/grammar/visitor/antlr/: GrammarVisitor.java
lab4_try2/src/resources/: CalculatorGrammar.g  PythonFunctionGrammar.g
lab4_try2/src/results/expression_generated/: main.cpp  parser.h
lab4_try2/src/results/lab2_generated/: parser.h
